<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.home.HomeFragment">

        <ImageView
            android:id="@+id/groupImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/group_photo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:mipmap/sym_def_app_icon"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/groupName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            app:layout_constraintBottom_toBottomOf="@id/groupImage"
            app:layout_constraintStart_toEndOf="@+id/groupImage"
            app:layout_constraintTop_toTopOf="@id/groupImage"
            tools:text="Gruppenname" />

        <TextView
            android:id="@+id/groupDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/groupImage"
            tools:text="Gruppenbeschreibung" />


        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/groupDescription">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/next_meeting" />

                <EditText
                    android:id="@+id/editDate"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="#A57C7C"
                    android:ems="10"
                    android:gravity="center"
                    android:importantForAutofill="no"
                    android:inputType="datetime"
                    tools:text="Datum eingeben" />

                <Button
                    android:id="@+id/editDateButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/edit_symbol" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:text="@string/at_host" />

                <TextView
                    android:id="@+id/currentHost"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="130dp"
                    android:layout_height="match_parent"
                    android:text="@string/next_host" />

                <TextView
                    android:id="@+id/nextHost"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center" />

            </LinearLayout>

            <Button
                android:id="@+id/navChatButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/menu_chat" />

            <Button
                android:id="@+id/navMembersButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/menu_members" />

            <Button
                android:id="@+id/navCollectionButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/menu_collection" />

            <Button
                android:id="@+id/navPollButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/menu_poll" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>