<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Spinner
            android:id="@+id/gamesSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/select_game"
            android:padding="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/voteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vote_game"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gamesSpinner" />

        <TextView
            android:id="@+id/pollNoticeInactive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/poll_not_active"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="invisible" />

        <LinearLayout
            android:id="@+id/pollResults"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/voteButton">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/interim_results"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/pollRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:itemCount="5"
                tools:listitem="@layout/item_poll">

            </androidx.recyclerview.widget.RecyclerView>
        </LinearLayout>

        <Switch
            android:id="@+id/pollSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pollResults"
            tools:text="Abstimmung aktiv/inaktiv"
            android:theme="@style/active"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>