<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <data>

        <variable
            name="rating"
            type="com.example.boardgameapp.model.Rating" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    app:srcCompat="@android:mipmap/sym_def_app_icon" />

                <TextView
                    android:id="@+id/textViewName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{rating.fromUsername}"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    tools:text="Name" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/host"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/rating_host"
                        android:textAlignment="viewStart"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/hostRating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@{String.format(`%.1f`, rating.hostRating)}"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        tools:text="4.0" />

                    <TextView
                        android:id="@+id/food"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/rating_food"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/foodRating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@{String.format(`%.1f`, rating.foodRating)}"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        tools:text="3.0" />

                    <TextView
                        android:id="@+id/evening"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/rating_evening"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/eveningRating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@{String.format(`%.1f`, rating.eveningRating)}"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        tools:text="4.0" />

                </LinearLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="8dp" />

                <TextView
                    android:id="@+id/comment"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@{rating.comment}"
                    android:textAlignment="viewStart"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    tools:text="comment" />
            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>